# final_project

./: .gitignore
app/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
app/data/: dataset.json
app/scripts/: baseline_loading.py  frames.py  load_data.py  main.py  my_collections.py  searching_baseline.py
app/src/api/: __init__.py
app/src/api/di/: __init__.py  answer_provider.py  load_data_provider.py  search_provider.py
app/src/api/v1/: __init__.py  schemas.py
app/src/api/v1/routers/: rag.py  search.py
app/src/core/application/embeddings/schemas/: load_data.py
app/src/core/application/generation/schemas/: answer.py
app/src/core/domain/: answer.py  company.py  document.py
app/src/infra/adapters/api/: __init__.py  document.py  search.py
app/src/infra/adapters/chunks/: __init__.py  interface.py  langchainSplitter.py  naive.py
app/src/infra/adapters/documents/: __init__.py  langchain.py
app/src/infra/adapters/embeddings/: __init__.py  bert.py  bge.py  frida.py  interface.py  multilingual_e5.py
app/src/infra/adapters/llm/: __init__.py  interface.py  openaiGenerator.py  webGenerator.py
app/src/infra/adapters/preprocessing/: __init__.py  interface.py  llm_preprocessor.py  preprocessor.py
app/src/infra/adapters/promts/: __init__.py  interface.py  jinjaPrompter.py
app/src/infra/adapters/rerank/: __init__.py  bge_reranker.py  interface.py
app/src/infra/adapters/validation/: __init__.py  interface.py  validate_preprocessor.py
app/src/infra/adapters/vdb/: __init__.py  interface.py  qdrantGateway.py
app/src/shared/: config.py
(+24 files in other folders)
