[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dishka>=1.7.2",
    "fastapi>=0.121.1",
    "hf-xet>=1.2.0",
    "langchain>=1.0.5",
    "langchain-text-splitters>=1.0.0",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "result>=0.17.0",
    "retry>=0.9.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
